--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,39 @@
     background: rgba(0, 0, 0, 0.8);
 }*/
 
-.thumbnailPhoto{
-    transform: scale(.7);
+nav{
+    background-color: #ffffff;
+    opacity: .95;
 }
+
+
+li > a {
+    position: relative;
+    color: #BF9595;
+    text-decoration: none; 
+}
+
+li > a:hover:{
+    color: #BF9595;
+    opacity: 0.5;
+}
+
+    li > a::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 8px;
+        bottom: 10px;
+        left: 0;
+        background-color: #BF9595;
+        opacity: 0.5;
+        visibility: hidden;
+        transform: scaleX(0);
+        transition: all 0.3s ease-in-out 0s;
+    }
+
+li > a:hover::before {
+    visibility: visible;
+    transform: scaleX(1);
+}
+
